--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
-    "build:scss": "node-sass src/styles/styles.scss -o src/styles"
+    "lint": "next lint"
   },
   "dependencies": {
     "axios": "^1.6.7",
